<resources>
    <string name="app_name">Nakupni seznam</string>
    <string name="add_item">Pridat</string>
    <string name="new_item">Nova polozka</string>
    <string name="quantity">pocet</string>
    <string name="edit_item">upravit</string>
    <string name="new_list">novy seznam</string>
    <string name="edit_list">upravit seznam</string>
    <string name="delete_list">Smazat seznam</string>
    <string name="btnBack">Zpet</string>
    <string name="btnClose">Ukoncit</string>
    <string name="rename_list">prejmenovat</string>
    <string name="new_name">novy nazev</string>
    <string name="btnSave">Ulozit</string>
</resources>