<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListsActivity">

    <TextView
        android:id="@+id/tvListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="20dp"
        android:background="@color/cardview_dark_background"
        android:textColor="@color/white"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/etEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/new_name"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Barva pozadí:"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/gvBackgroundColors"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:numColumns="5"
        android:verticalSpacing="8dp"
        android:horizontalSpacing="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Barva textu:"
        android:layout_marginLeft="16dp"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/gvTextColors"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:numColumns="5"
        android:verticalSpacing="8dp"
        android:horizontalSpacing="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cornerRadius="8dp"
            android:text="@string/btnBack" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cornerRadius="8dp"
            android:text="@string/btnSave" />
    </LinearLayout>

</LinearLayout>
